# mental_health_gita_ai_companion

./: README.md  index.html
gita-ai/: build.bat  gita_ai.py
gita-companion/: README.md  folder_structure.txt  index.html  package-lock.json  package.json
gita-companion/src/: App.tsx  index.css
gita-companion/src-tauri/: Cargo.toml  tauri.conf.json
gita-companion/src-tauri/capabilities/: default.json
gita-companion/src-tauri/icons/: icon.icns
gita-companion/src-tauri/src/: lib.rs  main.rs  state.rs
gita-companion/src-tauri/src/commands/: ai.rs  audio.rs  mod.rs  new_prompt.txt  system.rs
gita-companion/src/components/: ChatWindow.tsx  InputBar.tsx  MessageBubble.tsx  RoutingPanel.tsx  Sidebar.tsx  StatusBar.tsx  SystemCheck.tsx
gita-companion/src/hooks/: useChat.ts  useSystemCheck.ts
gita-companion/src/store/: chatStore.ts
gita-companion/src/types/: index.ts
voice-clone/: build.bat  setup.bat  voice_cloner.py
