[package]
name    = "gita-companion"
version = "1.0.0"
edition = "2021"

[lib]
name       = "gita_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = [] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
regex      = "1"
once_cell  = "1"

[features]
default          = ["custom-protocol"]
custom-protocol  = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto       = true
strip     = true
